--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ body {
   border-radius: 2px;
   box-shadow: 0px 0px 10px 1px #69F0D2, inset 0px 0px 10px 1px #69F0D2;
   background: #39697A;
+  cursor: pointer;
 }
 
 .css-button-down {
@@ -98,5 +99,6 @@ body {
 
 .css-button-disabled {
   opacity: 0.5;
+  cursor: default !important;
 }
 
